css/js menu fixes, added jumper sorting

--- a/app/views/blue.sass
+++ b/app/views/blue.sass
@@ -13,7 +13,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 body
   background: #ddd
-  font: 75%/1.5 "myriad pro", helvetica, arial, sans-serif
+  font: 75%/1.5 helvetica, arial, sans-serif
   color: #333
 
 table
@@ -786,6 +786,10 @@ ul.actions
     width: 100%
     th, td
       padding: 10px 10px 8px 10px
+      &.sorting_asc
+        font-weight: bold
+      &.sorting_desc
+        font-weight: bold
     th
       text-align: left
       font-weight: normal
